--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-@import url('https://v1.fontapi.ir/css/VazirFD:100');
-
 * {
   padding: 0;
   margin: 0;
@@ -8,42 +6,34 @@
   text-decoration: none;
 }
 
-body,
-* {
-  font-family: Vazir FD, sans-serif;
-}
-
 html {
   font-size: 62.5%;
 }
 
-h1.title{
+h1.title {
   font-size: 2.2rem;
   margin: 7.4rem 13.5rem;
 }
 
-
-.header{
+.header {
   display: flex;
-  flex-direction:row;
-  gap:1rem;
-   
+  flex-direction: row;
+  gap: 1rem;
 }
 
-.header_badge{
+.header_badge {
   width: 4rem;
   height: 4rem;
   color: #234894;
   background-color: #afcedd;
   font-size: 1.8rem;
   border-radius: 6px;
-  display:flex;
+  display: flex;
   justify-content: center;
-  align-items: center; */
+  align-items: center;
   white-space: nowrap;
-  margin-right: 15rem ;
+  margin-right: 15rem;
   flex-shrink: 0;
-  
 }
 
 .header_title {
@@ -52,99 +42,83 @@ h1.title{
   align-self: center;
   align-items: center;
   white-space: nowrap;
-  
 }
 
-.header_date{
+.header_date {
   align-self: center;
   opacity: 0.5;
-  margin-right: 22rem; 
-  
-  
+  margin-right: 22rem;
 }
 
-div.context{
-  margin:1.5rem 15rem ;
+div.context {
+  margin: 1.5rem 15rem;
 }
 
-
-div.context_title{
+div.context_title {
   font-size: 1.8rem;
-  font-weight: 700; 
+  font-weight: 700;
   align-items: center;
   white-space: nowrap;
 }
 
-
-div.context_paragraph{
+div.context_paragraph {
   font-size: 1.2rem;
   opacity: 0.5;
   align-items: center;
   white-space: nowrap;
 }
 
-
-.footer{
-  margin:1.5rem 15rem;
-  display:flex;
-  flex-direction:row;
-  gap:1rem;
+.footer {
+  margin: 1.5rem 15rem;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
 }
 
-.footer_avatar_img{
-  width:4.2rem;
-  height:4.2rem;
+.footer_avatar_img {
+  width: 4.2rem;
+  height: 4.2rem;
   border-radius: 0.7rem;
 }
 
-
-.footer_person_name{
+.footer_person_name {
   font-size: 1.6rem;
   font-weight: 700;
   margin: 1.3rem 0.2rem;
   text-align: center;
   white-space: nowrap;
-
 }
 
 .footer_btn {
   font-size: 1.6rem;
   cursor: pointer;
   outline: 0;
-  border:0;
+  border: 0;
   border-radius: 8px;
   padding: 2rem 2.5rem;
   text-align: center;
   white-space: nowrap;
   color: #fff;
-  background-color:#219f95;
-  margin:-2rem 7rem;
+  background-color: #219f95;
+  margin: -2rem 7rem;
 }
 
-
-.total{
-  display:grid;
+.total {
+  display: grid;
   grid-template-columns: 1fr;
-  gap:8rem;
+  gap: 8rem;
 }
 
 @media screen and (min-width: 768px) {
-  .total{
-    display:grid;
-    grid-template: repeat(3, 1fr)/repeat(2, 400px);
-  
+  .total {
+    display: grid;
+    grid-template: repeat(3, 1fr) / repeat(2, 40rem);
   }
-    
-  }
-  
-
+}
 
 @media screen and (min-width: 1024px) {
-  .total{
-    display:grid;
-    grid-template: repeat(2, 1fr)/repeat(3, 400px);
-    
+  .total {
+    display: grid;
+    grid-template: repeat(2, 1fr) / repeat(3, 40rem);
   }
-
-
-  }
+}
